tests/baselines/reference/lift.errors.txt
tests/cases/compiler/lift.ts(14,32): error TS2304: Cannot find name 'x'.
tests/cases/compiler/lift.ts(14,34): error TS2304: Cannot find name 'z'.
tests/cases/compiler/lift.ts(15,37): error TS2304: Cannot find name 'x'.
tests/cases/compiler/lift.ts(15,39): error TS2304: Cannot find name 'z'.


==== tests/cases/compiler/lift.ts (4 errors) ====
    class B {
        constructor(public y:number) {
        }
        public ll:number;  // to be shadowed
    }
    
    class C extends B {
        constructor(y:number,z:number,w:number) {
            super(y)
            var x=10+w;
            var ll=x*w;
        }
    
        public liftxyz () { return x+z+this.y; }
                                   ~
!!! error TS2304: Cannot find name 'x'.
                                     ~
!!! error TS2304: Cannot find name 'z'.
        public liftxylocllz () { return x+z+this.y+this.ll; }
                                        ~
!!! error TS2304: Cannot find name 'x'.
                                          ~
!!! error TS2304: Cannot find name 'z'.
    }
    